--- a/css/oj9_common.css
+++ b/css/oj9_common.css
@@ -1,13 +1,9 @@
 /*
 Copyright (c) 2017, 2018 IBM Corp. and others
-
-This program and the accompanying materials are made available under the terms of the Eclipse Public License 2.0 which accompanies this distribution and is available at http://eclipse.org/legal/epl-2.0 or the Apache License, Version 2.0 which accompanies this distribution and is available at https://www.apache.org/licenses/LICENSE-2.0. 
-
-This Source Code may also be made available under the following Secondary Licenses when the conditions for such availability set forth in the Eclipse Public License, v. 2.0 are satisfied: GNU General Public License, version 2 with the GNU Classpath Exception [1] and GNU General Public License, version 2 with the OpenJDK Assembly Exception [2]. 
-
-[1] https://www.gnu.org/software/classpath/license.html  
-[2] http://openjdk.java.net/legal/assembly-exception.html 
-
+This program and the accompanying materials are made available under the terms of the Eclipse Public License 2.0 which accompanies this distribution and is available at http://eclipse.org/legal/epl-2.0 or the Apache License, Version 2.0 which accompanies this distribution and is available at https://www.apache.org/licenses/LICENSE-2.0. 
+This Source Code may also be made available under the following Secondary Licenses when the conditions for such availability set forth in the Eclipse Public License, v. 2.0 are satisfied: GNU General Public License, version 2 with the GNU Classpath Exception [1] and GNU General Public License, version 2 with the OpenJDK Assembly Exception [2]. 
+[1] https://www.gnu.org/software/classpath/license.html  
+[2] http://openjdk.java.net/legal/assembly-exception.html 
 SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-exception-2.0 OR LicenseRef-GPL-2.0 WITH Assembly-exception
  */
 
@@ -70,6 +66,7 @@ a, a:active, a:visited {
 
 a.dark-link, a.dark-link:active, a.dark-link:visited {
   color: #407471;                      /*cyan - dark */
+  color: #bc4321;                      /* orange - dark */
 }
 a.dark-link:hover {
   color: #ff5424;                      /* orange - bright */
@@ -449,7 +446,7 @@ div#whatsnew p     { width: 100%;      }
 
 #whatsnew .f-content-container {
   margin-bottom: 1rem;
-  background-color: #f7f7f7;
+  background-color: #eee;
   border:1px solid #aaa;
 }
 #whatsnew h3 {
@@ -728,9 +725,4 @@ footer {
     width: 70%;
   }
 }
-
-
-
-
-
 
