--- a/css/oj9_common.css
+++ b/css/oj9_common.css
@@ -11,13 +11,18 @@ SPDX-License-Identifier: EPL-2.0 OR Apache-2.0 OR GPL-2.0 WITH Classpath-excepti
 /*** GLOBAL CSS ***/
 body {
   background-color: #36354f;           /* blue - dark */
+  background-color: #404040;
+  /* background-image: url("../assets/bg-d.png"); */
   background-image: url("../assets/bg-d.png");
   color: #4c4c4c;                      /* gray - dark */
 }
 
 
 .first-word {
-  color: #69c1bd;                      /* cyan */
+  color: #4c91b1;  /* teal */
+  color: #3f7b96;  /* teal - dark */
+  color: #bc4321;                      /* orange - dark */
+  color: #404040;                      /* dark gray */
   float: left;
   font-size: 2rem;
   line-height: 1.7rem;
@@ -27,7 +32,9 @@ span.first-word {
 }
 
 h3 {
-  color: #69c1bd;                      /* cyan */
+  color: #4c91b1;  /* teal */
+  color: #3f7b96;  /* teal - dark */
+  color: #404040;                      /* dark gray */
   float: left;
   font-size: 2rem;
   line-height: 1.7rem;
@@ -35,7 +42,9 @@ h3 {
   margin-bottom:1rem;
 }
 h4 {
-  color: #69c1bd;                      /* cyan */
+  color: #4c91b1;  /* teal */
+  color: #3f7b96;  /* teal - dark */
+  color: #404040;                      /* dark gray */
   float: left;
   font-size: 1.3rem;
   line-height: 1.7rem;
@@ -61,19 +70,21 @@ h1, h2, h3, h4, button, input, optgroup, select, textarea {
 /*** LINKS ***/
 a, a:active, a:visited {
   color: #bc4321;                      /* orange - dark */
+  color: #af6e3d;                      /* dark orange - Eclipse link: visited*/
   text-decoration: none;
 }
 
 a.dark-link, a.dark-link:active, a.dark-link:visited {
-  color: #407471;                      /*cyan - dark */
-  color: #bc4321;                      /* orange - dark */
+  color: #af6e3d;                      /* dark orange - Eclipse link: visited */
 }
 a.dark-link:hover {
   color: #ff5424;                      /* orange - bright */
+  color: #da7a08;                      /* orange - Eclipse button: hover */
 }
 
 a:hover {
   color: #ff5424;                      /* orange - bright */
+  color: #da7a08;                      /* orange - Eclipse button: hover */
 }
 
 
@@ -84,23 +95,31 @@ a.button, a.button:active, a.button:visited, a.button:hover {
   display: inline-block;
   opacity: 1;
   text-decoration: none;
-  cursor: pointer;
+
   border-radius: 10rem;
   margin: 0.5rem;
   font-size: 1.2rem;
 }
 
 a.button.internal-button {
-  background-color: #49486b;           /* blue - mid */
   color: #fff;                         /* white */
+  background-color: #49486b;           /* blue - mid */
+  background-color: #da7a08;           /* orange - Eclipse cookie compatible */
+  text-align: center;
+  min-height: 1.6rem;
+  box-sizing: border-box;
+  width: 100%;
+  margin: .1rem 0;
+  padding: 1rem;
 }
 a.button.internal-button:hover {
   background-color: #5c5b92;           /* blue - mid */
+  background-color: #ffa02e;           /* orange - Eclipse cookie compatible - hover*/
 }
 
 a.button.external-button {
-  background-color: #e95a32;           /* orange */
   color: #fff;                         /* white */
+  background-color: #da7a08;           /* orange - Eclipse cookie compatible */
   text-align: center;
   min-height: 1.6rem;
   box-sizing: border-box;
@@ -110,6 +129,7 @@ a.button.external-button {
 }
 a.button.external-button:hover {
   background-color: #ff5424;           /* orange - bright */
+  background-color: #ffa02e;           /* orange - Eclipse cookie compatible - hover*/
 }
 
 a.button.external-button.left-half {
@@ -142,7 +162,7 @@ div#main-title .nav {
   display: flex;  
   justify-content: flex-start;
   align-items: center;
-  color: #aaaabb;
+  color: #aaa;
   margin-left: 2rem;
   width: 3rem;
 }
@@ -150,10 +170,15 @@ div#main-title .nav p {
 	font-size: 1.1rem;
 }
 div#main-title .nav a.nav-item {
-  color: #69c1bd;                      /* cyan */
+  color: #3f7b96;
+  color: #4c91b1;
+  color: #65c1bd; /* cyan - OpenJ9 logo */
 }
 div#main-title .nav a.nav-item:hover {
   color: #ff5424;                      /* orange - bright */
+  color: #da7a08;                      /* orange - Eclipse button: hover */
+  color: #f7941e;                      /* orange - Eclipse button */
+  color: #ffa02e;                      /* orange - Eclipse cookie compatible - hover*/
 }
 div#main-title .nav .fa {
   font-size: 2rem;
@@ -171,7 +196,10 @@ div#main-title .nav-content .fa {
   padding: 1rem 1rem;
   z-index: 1;
   background-color: #443f5c;           /* blue - dark */
+  background-color: #353434;           /* dark grey - Eclipse background */
+
   border: 1px solid #302d42;           /* blue - very dark */
+  border: 1px solid #000;
   box-shadow: .5rem .5rem 1rem rgba(0,0,0,0.5);
 }
 .nav:hover .nav-content {
@@ -228,7 +256,7 @@ ol {
   line-height: 1.8rem;
 }
 ol li {
-  color: #69c1bd;                      /* cyan */
+  color: #3f7b96;                      /* cyan */
 }
 
 ul {
@@ -246,13 +274,14 @@ ul li {
 ul li::before {
   content: "\25FC";
   padding-right:1rem;
-  color: #69c1bd;                      /* cyan */
+  color: #3f7b96;                      /* cyan */
+  color: #aaa;                         /* light gray */
 }
 
 li > ul li::before {
   content: "\25FB";
   padding-right:1rem;
-  color: #69c1bd;                      /* cyan */
+  color: #3f7b96;                      /* cyan */
 }
 
 
@@ -265,7 +294,8 @@ pre {
 pre code::before {
   content: ">";
   padding-right:.5rem;
-  color: #69c1bd;                      /* cyan */
+  color: #3f7b96;                      /* cyan */
+  color: #aaa;                         /* light gray */
   font-weight: 800;
 }
 
@@ -321,6 +351,7 @@ h2 {
 
 /*** READ MORE ***/
 main div#intro-block div#read-more-button {
+  margin-top: 2rem;
   cursor: pointer;
   line-height: 1.4rem;
   font-size: 1.2rem;
@@ -329,6 +360,7 @@ main div#intro-block div#read-more-button {
   font-style: italic;
   font-weight: bold;
   color: #5c5b92;                      /* blue - light */
+  color: #404040; 
 }
 .read-more-link {
   line-height: 1.4rem;
@@ -337,6 +369,7 @@ main div#intro-block div#read-more-button {
   font-style: italic;
   font-weight: bold;
   color: #5c5b92;                      /* blue - light */
+  color: #404040; 
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -348,10 +381,13 @@ main div#intro-block div#read-more-button i {
   transition-property: transform;
   font-size:2.5rem;
   color: #49486b;                      /* blue - mid */
+  color: #404040;
+  color: #da7a08;                      /* orange - Eclipse cookie compatible */
 }
 
 main div#intro-block div#read-more-button i:hover {
   color: #5c5b92;                      /* blue - light */
+  color: #ffa02e;                      /* orange - Eclipse cookie compatible - hover*/
 }
 
 #read-more-text {
@@ -392,9 +428,12 @@ div.section-content {
 }
 
 div.section-content h1 {
-  background-color: #69c1bd;           /* cyan */
-  background-image: url("../assets/bg-l.png");
+  background-color: #3f7b96;           /* cyan */
+  background-color: #ddd;
+  /* background-image: url("../assets/bg-l.png"); */
+  /* background-image: url("../assets/bg-lg.png"); */
   color: #efefef;                      /* gray - light */
+  color: #404040;
   padding: 1.5rem;
   margin: 0;
   text-align:center;
@@ -402,9 +441,14 @@ div.section-content h1 {
 
 .intro-text {
   font-size:1.5rem;
+  font-size: 1.6rem;
   padding:2rem 2rem 1rem 2rem ;
   padding:2rem 5rem 1.5rem 5rem ;
-  color: #69c1bd;                      /* cyan */
+  color: #3f7b96;                      /* cyan */
+  color: #404040;
+  color: #c3751a;                      /* orange - brightish */
+  color: #69c1bd;                      /* cyan - ... */
+  color: #404040;
   text-align:center;
 }
 .intro-text1 {
@@ -412,7 +456,8 @@ div.section-content h1 {
   padding-bottom: 2rem;
   padding: 0 5rem 2rem 5rem;
   color: #407471;                      /*cyan - dark */
-  color: #69c1bd;                      /* cyan */
+  color: #3f7b96;                      /* cyan */
+  color: #404040;
   text-align:center;
 }
 
@@ -527,6 +572,8 @@ div.section-item-faq details {
   text-justify:left;
   margin-bottom: 0.5rem;
 }
+div.section-item-faq details:hover {
+}
 
 div.section-item-faq details summary {
   outline:0;
@@ -535,11 +582,17 @@ div.section-item-faq details summary {
   cursor: pointer;
   margin-top: .5rem;
   font-size: 1.2rem;
-  color: #69c1bd;                      /* cyan */
+  color: #3f7b96;                      /* cyan */
+  color: #af6e3d;                      /* dark orange - Eclipse link: visited*/
   font-weight: bold;
   padding-left: 1.2rem;
   text-indent: -1.2rem;
 }
+
+div.section-item-faq details summary:hover {
+  color: #da7a08;                      /* orange - Eclipse button: hover */
+}
+
 
 
 div.section-item-faq details p {
@@ -572,7 +625,8 @@ div.section-item-faq details p:last-child {
 /*** FOOTER ***/
 footer {
   background-color: #efefef;           /* gray - light */
-  background-image: url("../assets/bg-lg.png");
+  background-color: #ddd;
+  /* background-image: url("../assets/bg-lg.png"); */
   color: #4c4c4c;                      /* gray - dark */
   padding: 1rem;
   text-align: center;
@@ -582,19 +636,26 @@ footer {
   margin: 0.5rem 0.5rem 0rem 0.5rem;
   display: inline-block;
   text-align: center;
+  color: #af6e3d;                      /* dark orange - Eclipse link: visited */
 }
 
 .social-icon .fa {
-  filter: brightness(0);
+  /* filter: brightness(0); */
   margin: 0 auto;
-  opacity: 0.5;
+  color: #af6e3d;                      /* dark orange - Eclipse link: visited */
+  opacity: 1;
   transition-duration: 0.2s;
+  border 1px solid red;
 }
 
+
+
 .social-icon .fa:hover {
-  filter: brightness(1);
+  /* filter: brightness(1); */
   opacity: 1;
   color: #ff5424;                      /* orange */
+  color: #c3751a;                      /* orange - brightish */
+  color: #da7a08;                      /* orange - Eclipse button: hover */
 }
 
 .fa-chevron-circle-right {
@@ -635,7 +696,7 @@ footer {
   /*border:1px solid #ff5424;*/
 }
 .box:hover {
-  box-shadow: 0px 0px 10px #ff5424;
+  box-shadow: 0px 0px 10px #f7941e;
 }
 
 .pop span {
@@ -645,7 +706,7 @@ footer {
     display: block;
     padding: .5rem .5rem .5rem .5rem;
     color: white;
-    background: #ff5424;
+    background: #f7941e;
     left: 0px;
     position: absolute;
     top: -6rem;
@@ -690,11 +751,12 @@ footer {
   font-size: 3rem;
   transition: all 200ms;
   font-weight: bold;
-  color: #888;
+  color: #f7941e;
 }
 .pop-box .close:hover {
-  color: #ff5424;
+  color: #da7a08;
 }
+
 .pop-box img {
   max-width: 100%;
 }
@@ -726,3 +788,67 @@ footer {
   }
 }
 
+/* Version tabs */
+
+.tabs_bg {
+  background-color: #407471;           /*cyan - dark */
+  background-color: #ddd;
+  /* background-image: url("assets/bg-l.png"); */
+  /* background-image: url("../assets/bg-lg.png"); */
+}
+section {
+  background-color: #fff;
+  display: none;
+  padding: 20px 0 0;
+  border-top: 1px solid #000;
+  box-shadow: 0px -2px 12px 0px #999;
+}
+input {
+  display: none;
+}
+label {
+  display: inline-block;
+  margin: 0 0 -1px;
+  padding: 10px 25px 10px 25px;
+  font-weight: 600;
+  text-align: center;
+  color: #aaa;
+  color: #fff;
+  border: 1px solid transparent;
+  border-bottom: 1px solid #000;
+}
+label:hover {
+  color: #fff;
+  cursor: pointer;
+  background-color: #ffa02e;                      /* orange - Eclipse cookie compatible - hover*/
+}
+input + label {
+  background-color: #f7941e;                      /* orange - Eclipse home page compatible */
+  border-top-right-radius: 15px;
+  border-top-left-radius: 15px;
+/*
+  box-shadow: 4px -4px 5px 0px #2f5d72,  inset 0px -5px 5px 0px #4c91b1;
+  box-shadow: 4px -4px 5px 0px #999,  inset 0px -5px 5px 0px #f7941e;
+*/
+  box-shadow: 2px -2px 8px 0px #999;
+}
+
+
+input:checked + label {
+  color: #3f7b96;                      /* cyan */
+  color: #404040;
+  background-color: #fff;
+  border: 1px solid black;
+  border-bottom: 1px solid #fff;
+  box-shadow: 4px -2px 4px 0px #999;
+}
+
+#tab8:checked ~ #content8,
+#tab9:checked ~ #content9,
+#tab10:checked ~ #content10,
+#tab11:checked ~ #content11,
+#tab12:checked ~ #content12 {
+  display: block;
+}
+
+/* End: Version tabs */
