--- a/css/oj9_common.css
+++ b/css/oj9_common.css
@@ -865,3 +865,46 @@ input:checked + label {
 .tabpanel.inactive {
   display: none;
 }
+
+/* Cards */
+
+#perf-cards {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.card {
+	box-shadow:0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
+	box-sizing: border-box;
+    margin: 1rem .25em;
+}
+
+.card-content {
+	padding: 1.4em;
+}
+
+.card-content h4 {
+	padding: 0;
+    margin: 0 0 1em 0;	
+	text-align: center;
+	width: 100%;
+}
+
+.card-content img {
+	display: block;
+	border: 0;
+	width: 100%;
+	max-width:299px;
+	height: auto;
+	margin: 0 0 1em 0;	
+}	
+
+/* Adjust for different screen sizes - 2 cards per row for larger screens, otherwise default (full width) */
+@media screen and (min-width: 40em) {
+    .card {
+        max-width: calc(50% - 1em);
+    }
+}
